<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/institute"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="147dp"
        android:id="@+id/institute_name"
        android:alpha="0.5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/website_link"
        android:ems="10"
        android:layout_marginTop="23dp"
        android:id="@+id/website_link"
        android:layout_below="@+id/passing_word"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/passing_word"
        android:layout_below="@+id/institute_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/password_institute"
        android:alpha="0.5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/registration_number"
        android:ems="10"
        android:layout_below="@+id/website_link"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:id="@+id/reg_number"
        android:alpha="0.5"
        tools:ignore="TextFields" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType=""
        android:text="@string/email_insitute"
        android:ems="10"
        android:layout_below="@+id/reg_number"
        android:layout_alignRight="@+id/reg_number"
        android:layout_alignEnd="@+id/reg_number"
        android:layout_marginTop="25dp"
        android:id="@+id/email_institute"
        android:alpha="0.5"
        tools:ignore="TextFields" />
</RelativeLayout>
