<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:ems="10"
        android:layout_marginTop="216dp"
        android:id="@+id/emailing"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        tools:ignore="TextFields"
        android:alpha="0.50" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pasing_words"
        android:text="@string/password"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/user_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.50" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:id="@+id/user_name"
        android:layout_below="@+id/emailing"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.50" />
</RelativeLayout>
